--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -11,7 +11,7 @@
 body{
   height: 100vh;
   width: 100%;
-  background: url("./Web-Background_1.png") ;
+  background: url("./background-abstract.jpg") ;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed
@@ -24,6 +24,12 @@ body{
   transform: translate(-50%, -50%);
   padding: 30px;
   background: #fff;
+}
+
+.container-fluid {
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 input[type="checkbox"]{
