--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -11,7 +11,7 @@
 body{
   height: 100vh;
   width: 100%;
-  background: url("./background-abstract.jpg") ;
+  background: url("./fondo.jpg") ;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed
